2008-07-02  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* gst/matroska/matroska-demux.c: (gst_matroska_demux_reset),
	(gst_matroska_demux_handle_src_query),
	(gst_matroska_demux_parse_info),
	(gst_matroska_demux_loop_stream_parse_id):
	* gst/matroska/matroska-demux.h:
	Don't set the segment duration to the duration from the Matroska
	header as this value could be wrong and is just informational.

2008-07-02  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* gst/matroska/matroska-demux.c:
	(gst_matroska_demux_loop_stream_parse_id):
	If no Tracks element is found until the first Cluster is found
	search it and error out if none is found in the complete file.

2008-07-02  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* gst/matroska/matroska-demux.c: (gst_matroska_demux_sync_streams):
	Resync non-subtitle tracks too if a too large gap compared to other
	tracks is detected.

2008-07-01  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/rtp/Makefile.am:
	* gst/rtp/gstrtp.c: (plugin_init):
	* gst/rtp/gstrtpvrawdepay.c: (gst_rtp_vraw_depay_base_init),
	(gst_rtp_vraw_depay_class_init), (gst_rtp_vraw_depay_init),
	(gst_rtp_vraw_depay_setcaps), (gst_rtp_vraw_depay_process),
	(gst_rtp_vraw_depay_change_state),
	(gst_rtp_vraw_depay_plugin_init):
	* gst/rtp/gstrtpvrawdepay.h:
	* gst/rtp/gstrtpvrawpay.c: (gst_rtp_vraw_pay_get_type),
	(gst_rtp_vraw_pay_base_init), (gst_rtp_vraw_pay_class_init),
	(gst_rtp_vraw_pay_init), (gst_rtp_vraw_pay_finalize),
	(gst_rtp_vraw_pay_setcaps), (gst_rtp_vraw_pay_handle_buffer),
	(gst_rtp_vraw_pay_plugin_init):
	* gst/rtp/gstrtpvrawpay.h:
	Add raw video pay and depayloaders, see RFC4175.

2008-06-30  Jan Schmidt  <jan.schmidt@sun.com>

	* ext/libpng/gstpngdec.c:
	Don't return GST_FLOW_ERROR when buffer_alloc fails - return
	whatever it returned.

2008-06-29  Mark Nauwelaerts  <mark.nauwelaerts@collabora.co.uk>

	* gst/avi/avi-ids.h:
	Add vprp chunk related structures.