@@ -1,5 +1,12 @@
 2008-07-02  Sebastian Dröge  <sebastian.droege@collabora.co.uk>
 
+	* gst/matroska/ebml-read.c: (_ext2dbl):
+	Use NAN constant instead of 0.0/0.0 if possible. NAN is defined
+	in math.h except on MSVC where it is defined in xmath.h.
+	Fixes compilation with MSVC.
+
+2008-07-02  Sebastian Dröge  <sebastian.droege@collabora.co.uk>
+
 	* gst/matroska/matroska-demux.c: (gst_matroska_demux_reset),
 	(gst_matroska_demux_handle_src_query),
 	(gst_matroska_demux_parse_info),
